bookstore-app-demo/services/route/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookstore-ingrerss
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 80
          - path: /api/books
            backend: 
              serviceName: shopapi
              servicePort: 3000
          - path: /shop
            backend:
              serviceName: shopui
              servicePort: 80
